# eigenface

./: .gitignore  CMakeLists.txt  README.md  batch_test.sh  mytest.cpp  mytrain.cpp  utils.cpp  utils.h
